package javasharks.excusas_challenge.dto;

// DTO completo para Ley
public record LeyDTO(Long id, String fuente, String texto, String role) {
}
