package javasharks.excusas_challenge.dto;

// DTO completo para Meme
public record MemeDTO(Long id, String nombre, String referencia, String role) {
}
