package javasharks.excusas_challenge.model;

public enum FragmentType {
    CONTEXTO,
    CAUSA,
    CONSECUENCIA,
    RECOMENDACION
}
